FIX: improved compatibility with Java 8